--- a/main.css
+++ b/main.css
@@ -1,7 +1,12 @@
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 header {
-    background-color: aquamarine; 
+    /* background-color: aquamarine;  */
     width: 800px; 
     margin-left: calc(50% - 400px);
+    display: inline-block;
 }
 
 main {
@@ -9,4 +14,23 @@ main {
     width: 800px; 
     margin-left: calc(50% - 400px); 
     margin-top: 100px;
+}
+
+img {
+    float: left;
+    height: 46px;
+}
+
+nav {
+    float: right;
+    margin-top: 13px;
+}
+
+a {
+    display: inline-block;
+    font-size: 20px;
+    line-height: 20px;
+    margin-left: 20px;
+    text-decoration: none;
+    color: black;
 }
