--- a/main.css
+++ b/main.css
@@ -1,36 +1,42 @@
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 header {
-    /* background-color: aquamarine;  */
-    width: 800px; 
-    margin-left: calc(50% - 400px);
-    display: inline-block;
+  /* background-color: aquamarine;  */
+  width: 800px;
+  margin-left: calc(50% - 400px);
+  display: inline-block;
 }
 
 main {
-    background-color: aqua; 
-    width: 800px; 
-    margin-left: calc(50% - 400px); 
-    margin-top: 100px;
+  background-color: aqua;
+  width: 800px;
+  margin-left: calc(50% - 400px);
+  margin-top: 100px;
 }
 
 img {
-    float: left;
-    height: 46px;
+  float: left;
+  height: 46px;
 }
 
 nav {
-    float: right;
-    margin-top: 13px;
+  float: right;
+  margin-top: 13px;
 }
 
 a {
-    display: inline-block;
-    font-size: 20px;
-    line-height: 20px;
-    margin-left: 20px;
-    text-decoration: none;
-    color: black;
+  display: inline-block;
+  font-size: 20px;
+  line-height: 20px;
+  margin-left: 20px;
+  text-decoration: none;
+  color: black;
+  padding-bottom: 5px;
+}
+
+a:hover {
+  /* color: red; */
+  border-bottom: 2px solid red;
 }
