--- a/main.css
+++ b/main.css
@@ -1,32 +1,38 @@
+body,
+body * {
+  margin: 0;
+  padding: 0;
+  vertical-align: top;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-header {
+header,
+main {
   /* background-color: aquamarine;  */
-  width: 800px;
-  margin-left: calc(50% - 400px);
+  width: 1000px;
+  margin-left: calc(50% - 500px);
   display: inline-block;
 }
 
 main {
-  background-color: aqua;
-  width: 800px;
-  margin-left: calc(50% - 400px);
   margin-top: 100px;
 }
 
-img {
+header > img {
   float: left;
   height: 46px;
 }
 
-nav {
+header > nav {
   float: right;
   margin-top: 13px;
 }
 
-a {
+nav > a {
   display: inline-block;
   font-size: 20px;
   line-height: 20px;
@@ -36,7 +42,38 @@ a {
   padding-bottom: 5px;
 }
 
-a:hover {
+nav > a:hover {
   /* color: red; */
   border-bottom: 2px solid red;
+}
+
+nav > a:first-child {
+  border-bottom: 2px solid red;
+}
+
+main > img {
+  float: right;
+  width: 55%;
+  height: 300px;
+  background-color: bisque;
+}
+
+main > div {
+  float: left;
+  width: 45%;
+  padding-right: 10%;
+  background-color: pink;
+  
+}
+
+div > h1 {
+
+}
+
+p {
+
+}
+
+div > a {
+  background-color: orange;
 }
