--- a/main.css
+++ b/main.css
@@ -52,18 +52,19 @@ nav > a:first-child {
 }
 
 main > img {
-  float: right;
+  float: left;
   width: 55%;
-  height: 300px;
-  background-color: bisque;
+  height: 400px;
+  /* background-color: bisque; */
+  object-fit: contain;
+  object-position: center;
 }
 
 main > div {
   float: left;
   width: 45%;
   padding-right: 10%;
-  background-color: pink;
-  
+  /* background-color: pink; */
 }
 
 div > h1 {
